--- a/index.html
+++ b/index.html
@@ -13,8 +13,8 @@
        <link rel="stylesheet" href="style.css">
     <meta name="apple-mobile-web-app-status-bar" content="white">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <meta name="theme-color" media="(prefers-color-scheme: light)" content="cadetblue">
-<meta name="theme-color" media="(prefers-color-scheme: dark)" content="#1c1c1e">
+  <meta name="theme-color" media="(prefers-color-scheme: light)" content="green">
+<meta name="theme-color" media="(prefers-color-scheme: dark)" content="green">
 
     <style type="text/css">
 
